--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "cms-hitech-sandbox",
+  "homepage":
+    "https://federalist-proxy.app.cloud.gov/site/18f/cms-hitech-sandbox/",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
