--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cms-hitech-sandbox",
-  "homepage":
-    "https://federalist-proxy.app.cloud.gov/site/18f/cms-hitech-sandbox/",
+  "homepage": "https://federalist-proxy.app.cloud.gov/site/18f/cms-hitech-sandbox/",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
   "scripts": {
@@ -16,8 +16,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build -b build",
-    "prettier":
-      "prettier --single-quote --trailing-comma none --write \"src/**/*.js\""
+    "prettier": "prettier --single-quote --trailing-comma none --write \"src/**/*.js\""
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
